fixed text overflow for notification banner content

--- a/src/gds-upgrade/sass/components/_notification-banner.scss
+++ b/src/gds-upgrade/sass/components/_notification-banner.scss
@@ -10,6 +10,11 @@
   &:focus {
     outline: none;
   }
+
+  & .govuk-notification-banner__content {
+  .wrap {
+    overflow-wrap: break-word;
+}}
 }
 
 .govuk-notification-badge {
